--- a/popup_see_room.html
+++ b/popup_see_room.html
@@ -67,14 +67,14 @@
 				    <!-- Wrapper for slides -->
 				    <div class="carousel-inner" style="border-radius: 2rem;">
 				     <div class="item active">
-				        <img src="ima/slide1.JPG" alt="" style="width:100%;">
+				        <img src="img/room/slide1.JPG" alt="" style="width:100%;">
 				      </div>
 				      <div class="item">
-				        <img src="ima/slide2.JPG" alt="" style="width:100%;">
+				        <img src="img/room/slide2.JPG" alt="" style="width:100%;">
 				      </div>
 				    
 				      <div class="item">
-				        <img src="ima/slide3.JPG" alt="" style="width:100%;">
+				        <img src="img/room/slide3.JPG" alt="" style="width:100%;">
 				      </div>
 				    </div>
 
@@ -99,7 +99,7 @@
 					<div class="utilities_box" style="width: 100%;margin-top: 1.5rem;height: 240px;">
 						<div class="icon_box" style="width: 50%;float: left;display: flex;margin-top: 5px;">
 							<div class="icon_img" style="width: 32px;height: 32px;">
-								<img src="ima/icon_bed.png" width="100%">
+								<img src="img/icon/icon_bed.png" width="100%">
 							</div>
 							<div class="icon_text float-right" style="width: 170px;height: 40px;">
 								<p style="margin-top: 0.6rem;font-size: 115%;margin-left: 1.8rem;">2 Giường ngủ</p>
@@ -107,7 +107,7 @@
 						</div>
 						<div class="icon_box" style="width: 50%;float: right;display: flex;margin-top: 5px;">
 							<div class="icon_img" style="width: 32px;height: 32px;">
-								<img src="ima/icon_water.png" width="100%">
+								<img src="img/icon/icon_water.png" width="100%">
 							</div>
 							<div class="icon_text float-right" style="width: 170px;height: 40px;">
 								<p style="margin-top: 0.6rem;font-size: 115%;margin-left: 1.8rem;">Nước nóng lạnh</p>
@@ -115,7 +115,7 @@
 						</div>
 						<div class="icon_box" style="width: 50%;float: left;display: flex;margin-top: 5px;">
 							<div class="icon_img" style="width: 32px;height: 32px;">
-								<img src="ima/icon_bathtub.png" width="100%">
+								<img src="img/icon/icon_bathtub.png" width="100%">
 							</div>
 							<div class="icon_text float-right" style="width: 170px;height: 40px;">
 								<p style="margin-top: 0.6rem;font-size: 115%;margin-left: 1.8rem;">Bồn tắm 2 người</p>
@@ -123,7 +123,7 @@
 						</div>
 						<div class="icon_box" style="width: 50%;float: right;display: flex;margin-top: 5px;">
 							<div class="icon_img" style="width: 32px;height: 32px;">
-								<img src="ima/icon_window.png" width="100%">
+								<img src="img/icon/icon_window.png" width="100%">
 							</div>
 							<div class="icon_text float-right" style="width: 170px;height: 40px;">
 								<p style="margin-top: 0.6rem;font-size: 115%;margin-left: 1.8rem;">Tầm nhìn cảnh</p>
@@ -131,7 +131,7 @@
 						</div>
 						<div class="icon_box" style="width: 50%;float: left;display: flex;margin-top: 5px;">
 							<div class="icon_img" style="width: 32px;height: 32px;">
-								<img src="ima/icon_tivi.png" width="100%">
+								<img src="img/icon/icon_tivi.png" width="100%">
 							</div>
 							<div class="icon_text float-right" style="width: 170px;height: 40px;">
 								<p style="margin-top: 0.6rem;font-size: 115%;margin-left: 1.8rem;">2 Tivi</p>
@@ -139,7 +139,7 @@
 						</div>
 						<div class="icon_box" style="width: 50%;float: right;display: flex;margin-top: 5px;">
 							<div class="icon_img" style="width: 32px;height: 32px;">
-								<img src="ima/icon_wifi.png" width="100%">
+								<img src="img/icon/icon_wifi.png" width="100%">
 							</div>
 							<div class="icon_text float-right" style="width: 170px;height: 40px;">
 								<p style="margin-top: 0.6rem;font-size: 115%;margin-left: 1.8rem;">Wifi riêng</p>
@@ -147,7 +147,7 @@
 						</div>
 						<div class="icon_box" style="width: 50%;float: left;display: flex;margin-top: 5px;">
 							<div class="icon_img" style="width: 32px;height: 32px;">
-								<img src="ima/icon_air-conditioner.png" width="100%">
+								<img src="img/icon/icon_air-conditioner.png" width="100%">
 							</div>
 							<div class="icon_text float-right" style="width: 170px;height: 40px;">
 								<p style="margin-top: 0.6rem;font-size: 115%;margin-left: 1.8rem;">Điều hòa</p>
@@ -155,7 +155,7 @@
 						</div>
 						<div class="icon_box" style="width: 50%;float: right;display: flex;margin-top: 5px;">
 							<div class="icon_img" style="width: 32px;height: 32px;">
-								<img src="ima/icon_washing-machine.png" width="100%">
+								<img src="img/icon/icon_washing-machine.png" width="100%">
 							</div>
 							<div class="icon_text float-right" style="width: 170px;height: 40px;">
 								<p style="margin-top: 0.6rem;font-size: 115%;margin-left: 1.8rem;">Máy giặc riêng</p>
