--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			display: none;
 		}
 		.box_post_slide{
-			width: 172px !important;
+			width: 160px !important;
 		}
 		.slick-slide{
 		margin: 0px 5px !important;
@@ -204,9 +204,9 @@ section{
   
 }
     </style>
-  <div class="container-fluid" style="background: url(img/bg.jpg) no-repeat;
+  <div class="menu" style="background: url(img/bg.jpg) no-repeat;
   background-size: cover;
-  height: calc(100vh);">
+  height: calc(100vh);width: 100%">
     <nav>
       <input type="checkbox" id="check">
       <label for="check" class="checkbtn">
