trang update review and info

--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@ function myFunction() {
       <div class="rate_post" style="width: 100%;height: 17.5px;display: flex;padding-left: 8px;margin-top: 4px;">
       	<div class="box_star" style="display: flex;width: 60%;">
         <div class="star mr-1" style="width: 10px;height: 12px;margin-top: -5px;">
-          <img src="img/icon/icon_star.svg" width="110%">
+          <img src="ima/icon_star.svg" width="110%">
         </div>
         <div class="star mr-1" style="width: 10px;margin-top: -5px;">
           <img src="img/icon/icon_star.svg" width="110%">
