update login_form and fix deatail_room_page

--- a/deatail_room_page_test.html
+++ b/deatail_room_page_test.html
@@ -33,7 +33,7 @@
     <div class="tool_function_love float-left" style="width: 45px;height: 45px;;border-radius: 8px;padding-top: 10px;padding-left: 10px;border:1px solid #FF631C; ">
       <i class="fa fa-list" aria-hidden="true" style="font-size: 140%;color:#FF631C "></i>
     </div>
-    <div class="tool_function_booking float-right" style="width: 285px;height: 45px;background:#FF631C;border-radius: 8px;padding-top: 10px;">
+    <div class="tool_function_booking float-right" style="width: 80%;height: 45px;background:#FF631C;border-radius: 8px;padding-top: 10px;">
       <p class="text-center text-white">Đặt phòng ngay</p>
     </div>
   </div>
@@ -275,29 +275,29 @@ p.info_room_detail{
       </div>
 
 
-      <p class="font-weight-bold mb-1 mt-2" style="font-size: 110%">Đánh giá</p>
+      <p class="font-weight-bold mb-1 mt-3" style="font-size: 110%">Đánh giá</p>
       <div class="info_detail_box mt-3" style="width: 100%;height: 300px;">
-        <div class="info_detail mt-1" style="width: 100%; height: 80px;">
+        <div class="info_detail" style="width: 100%; height: 80px;">
           <div class="ima" style=" float: left; width: 60px; height: 80px;">
                 <img src="img/room/slide1.jpg" style=" width: 50px; height: 50px;border-radius: 50%">  
           </div>
           <div class="comment" style="width: 100%;height: 80px;">
-            <p style=" font-weight:bold">HuyenTrang</p>
-            <p style="font-size:15px; margin-top: -1rem;">Nội dung bình luận</p>
-            <div class="row">
-            <div class="star mr-2 mb-2" style="width: 10px;height: 12px;margin-top: -1rem;">
+            <p class="mb-0" style=" font-weight:bold">HuyenTrang</p>
+            <p class="mb-0" style="font-size:15px;">Nội dung bình luận</p>
+            <div class="row m-0">
+            <div class="star mr-2 mb-2" style="width: 10px;">
               <img src="img/icon/icon_star.svg" width="140%">
             </div>
-            <div class="star mr-2 mb-2" style="width: 10px;margin-top: -1rem;">
+            <div class="star mr-2 mb-2" style="width: 10px;">
               <img src="img/icon/icon_star.svg" width="140%">
             </div>
-            <div class="star mr-2 mb-2" style="width: 10px;margin-top: -1rem;">
+            <div class="star mr-2 mb-2" style="width: 10px;">
               <img src="img/icon/icon_star.svg" width="140%">
             </div>
-            <div class="star mr-2 mb-2" style="width: 10px;margin-top: -1rem;">
+            <div class="star mr-2 mb-2" style="width: 10px;">
              <img src="img/icon/icon_star.svg" width="140%">
             </div>
-            <div class="star mr-2 mb-2" style="width: 10px;margin-top: -1rem;">
+            <div class="star mr-2 mb-2" style="width: 10px;">
               <img src="img/icon/icon_star.svg" width="140%">
             </div>
             </div>
@@ -309,22 +309,22 @@ p.info_room_detail{
                 <img src="img/room/slide1.jpg" style=" width: 50px; height: 50px;border-radius: 50%">  
           </div>
           <div class="comment" style="width: 100%;height: 80px;">
-            <p style=" font-weight:bold">HuyenTrang</p>
-            <p style="font-size:15px; margin-top: -1rem;">Nội dung bình luận</p>
-            <div class="row">
-            <div class="star mr-2 mb-2" style="width: 10px;height: 12px;margin-top: -1rem;">
+            <p class="mb-0" style=" font-weight:bold">HuyenTrang</p>
+            <p class="mb-0" style="font-size:15px;">Nội dung bình luận</p>
+            <div class="row m-0">
+            <div class="star mr-2 mb-2" style="width: 10px;">
               <img src="img/icon/icon_star.svg" width="140%">
             </div>
-            <div class="star mr-2 mb-2" style="width: 10px;margin-top: -1rem;">
+            <div class="star mr-2 mb-2" style="width: 10px;">
               <img src="img/icon/icon_star.svg" width="140%">
             </div>
-            <div class="star mr-2 mb-2" style="width: 10px;margin-top: -1rem;">
+            <div class="star mr-2 mb-2" style="width: 10px;">
               <img src="img/icon/icon_star.svg" width="140%">
             </div>
-            <div class="star mr-2 mb-2" style="width: 10px;margin-top: -1rem;">
+            <div class="star mr-2 mb-2" style="width: 10px;">
              <img src="img/icon/icon_star.svg" width="140%">
             </div>
-            <div class="star mr-2 mb-2" style="width: 10px;margin-top: -1rem;">
+            <div class="star mr-2 mb-2" style="width: 10px;">
               <img src="img/icon/icon_star.svg" width="140%">
             </div>
             </div>
@@ -336,22 +336,22 @@ p.info_room_detail{
                 <img src="img/room/slide1.jpg" style=" width: 50px; height: 50px;border-radius: 50%">  
           </div>
           <div class="comment" style="width: 100%;height: 80px;">
-            <p style=" font-weight:bold">HuyenTrang</p>
-            <p style="font-size:15px; margin-top: -1rem;">Nội dung bình luận</p>
-            <div class="row">
-            <div class="star mr-2 mb-2" style="width: 10px;height: 12px;margin-top: -1rem;">
+            <p class="mb-0" style=" font-weight:bold">HuyenTrang</p>
+            <p class="mb-0" style="font-size:15px;">Nội dung bình luận</p>
+            <div class="row m-0">
+            <div class="star mr-2 mb-2" style="width: 10px;">
               <img src="img/icon/icon_star.svg" width="140%">
             </div>
-            <div class="star mr-2 mb-2" style="width: 10px;margin-top: -1rem;">
+            <div class="star mr-2 mb-2" style="width: 10px;">
               <img src="img/icon/icon_star.svg" width="140%">
             </div>
-            <div class="star mr-2 mb-2" style="width: 10px;margin-top: -1rem;">
+            <div class="star mr-2 mb-2" style="width: 10px;">
               <img src="img/icon/icon_star.svg" width="140%">
             </div>
-            <div class="star mr-2 mb-2" style="width: 10px;margin-top: -1rem;">
+            <div class="star mr-2 mb-2" style="width: 10px;">
              <img src="img/icon/icon_star.svg" width="140%">
             </div>
-            <div class="star mr-2 mb-2" style="width: 10px;margin-top: -1rem;">
+            <div class="star mr-2 mb-2" style="width: 10px;">
               <img src="img/icon/icon_star.svg" width="140%">
             </div>
             </div>
