--- a/deatail_room_page_pc.html
+++ b/deatail_room_page_pc.html
@@ -303,7 +303,7 @@ p.info_room_detail{
 
 	</style>
 
-	<div class="menu_main container-fluid p-0" style="height: 60px;">
+	<div class="menu_main container-fluid p-0" style="height: 60px;" >
 		
 
 		<div class="menu" style="width: 100%;">
@@ -557,8 +557,8 @@ p.info_room_detail{
 				</div>
 		</div>
 <!-- thông tin đặt phòng -->
-	<div class="col-sm-12 col-md-3 p-0 pl-5" style="height: 100px;position: fixed;margin-left: calc(100vw - 380px);">
-		<div class="info_booking p-2 pl-3 shadow-sm" style="width: 100%;height: 500px;background: #fff;border-radius: 8px;">
+	<div class="col-sm-12 col-md-3 p-0 pl-2">
+		<div class="info_booking p-2 pl-3 shadow-sm" style="width: 23%;height: 500px;background: #fff;border-radius: 8px;position: fixed;">
 			<p class="font-weight-bold" style="font-size: 120%">Thông tin đặt phòng</p>
 		</div>
 	</div>
