--- a/index11.html
+++ b/index11.html
@@ -157,9 +157,9 @@ input {
     }
   }
 </style>
-<div class="container-fluid text-white" style="background-image: url(img/bg.jpg); background-repeat: no-repeat;">
+<div class="container-fluid text-white p-3" style="background-image: url(img/bg.jpg); background-repeat: no-repeat;">
 	<div>
-		<input type="button" value="X" style="border: 0; color: white; position: absolute; right: 0; margin: 5px">
+		<input type="button" value="X" style="border: 0; color: white; position: absolute; right: 5%;">
 		
 	</div>
 
@@ -186,7 +186,7 @@ input {
     </div>
 
 
-<div class="container-fluid p-0 mt-2" style="width: 90%;margin: auto;">
+<div class="container-fluid p-3 mt-2" style="margin: auto;">
 
 	
    		<!-- -----Search---- -->
