--- a/popup_registration_form.html
+++ b/popup_registration_form.html
@@ -76,11 +76,11 @@
 
 	<div class="box_login_main mt-3" style="width: 80%;margin: auto">
 		<div class="row m-0 ">
-			<div class="box_login_row col-lg-5 col-sm-12 p-5 bg-white p-0">
+			<div class="box_login_row col-lg-5 col-sm-12 p-4 bg-white">
 				<p style="color: orange; font-weight: bold; margin-bottom: 1rem; font-size: 160%">Đăng Ký</p>
-				<p style="font-size: 140%;font-weight: bold;">Chào mừng bạn đến với hệ thống đặt phòng của Travelcon</p>
-				<p>Bạn sẽ đăng ký tài khoản tại đây:</p>
-				<div class="mt-4 mb-4">
+				<p class="mb-1" style="font-size: 140%;font-weight: bold;">Chào mừng bạn đến với hệ thống đặt phòng của Travelcon</p>
+				<p >Bạn sẽ đăng ký tài khoản tại đây</p>
+				<div class="mt-3 mb-3">
 					<div style="width: 100%; background: white; border-left: 3px solid orange;">
 					    <p style="margin-top: 6px; padding-left: 10px; height: 10px; color: orange;font-weight: bold;">Họ và Tên</p>
 					    <input style="width: 100%; border: 0; border-radius: 5px; color: black; padding-left: 10px; font-size: 16px;outline: none;" type="text" placeholder="Họ và Tên">
@@ -103,19 +103,13 @@
 
 				</div>
 
-				<p style="font-weight:bold">Tôi đồng ý với Bảo mật và Điều khoản hoạt động của Travelcon.</p>
+				<p class="mb-0">Tôi đồng ý với Bảo mật và Điều khoản hoạt động của Travelcon.</p>
 
-				<div>
-					<div class="custom-control custom-checkbox float-left">
-					  <input type="checkbox" class="custom-control-input" id="defaultInline1">
-					  <label class="custom-control-label" for="defaultInline1">Không đồng ý</label>
-					</div>
-					
-				</div>
+				
 
 				<br>
 
-				<div class="mt-3">
+				<div>
 					<a href="#"><div class="btn" style="background: orange; color: white;width: 48%">Đăng nhập</div></a>
 					<a href="#"><div class="btn float-right" style="color: orange; border: 1px solid orange;width: 48%">Đăng ký</div></a>
 				</div>
