--- a/index12_mobile.html
+++ b/index12_mobile.html
@@ -142,7 +142,7 @@
                  <p class="mb-0 font-weight-bold" style="font-size: 100%">Liên hệ qua tin nhắn (Ưu tiên)</p>
                  <p class="mb-0" style="font-size: 70%">Bạn sẽ được hỗ trợ khi nhắn tin trực tiếp</p>
                   <div class="tool_book_box">
-                   <a href=""><div class="btn p-0" style="background: #ff631c; color: white; font-size: 80%;  width: 50%; height: 25px">Nhắn tin tại đây</div></a>
+                   <a href=""><div class="btn p-0" style="background: #ff631c; color: white; font-size: 80%;  width: 50%; height: 24px">Nhắn tin tại đây</div></a>
                  </div>
                </div>        
              </div>
@@ -163,13 +163,13 @@
                  <p class="mb-0 font-weight-bold" style="font-size: 100%">Gọi điện thoại</p>
                  <p class="mb-0" style="font-size: 70%">Bạn sẽ được thực hiện đến tổng đài Travelcon</p>
                   <div class="tool_book_box">
-                   <a href=""><div class="btn p-0" style="background: #ff631c; color: white; font-size: 90%;  width: 50%; height: 25px">123-456-789</div></a>
+                   <a href=""><div class="btn p-0" style="background: #ff631c; color: white; font-size: 90%;  width: 50%; height: 24px">123-456-789</div></a>
                  </div>
                </div>        
              </div>
 
 
-             <div class="row m-0">
+             <div class="row m-0 mt-2">
                <div class="image_book_box" style="background: white;">
                  <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 63 47">
   <g id="Group_355" data-name="Group 355" transform="translate(-531 -245)">
@@ -183,13 +183,13 @@
                  <p class="mb-0 font-weight-bold" style="font-size: 100%">Liên hệ qua Email</p>
                  <p class="mb-0" style="font-size: 70%">Bạn sẽ được thực hiện hỗ trợ khi gửi email đến chúng tôi </p>
                   <div class="tool_book_box">
-                   <a href=""><div class="btn p-0" style="background: #ff631c; color: white; font-size: 90%;  width: 50%; height: 25px">abc@gmail.com</div></a>
+                   <a href=""><div class="btn p-0" style="background: #ff631c; color: white; font-size: 90%;  width: 50%; height: 24px">abc@gmail.com</div></a>
                  </div>
                </div>        
              </div>
 
 
-            <div class="row m-0">
+            <div class="row m-0 mt-2">
                <div class="image_book_box" style="background: white;">
                  <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 64.824 61.857">
   <g id="Group_345" data-name="Group 345" transform="translate(-706.119 -445.043)">
@@ -204,7 +204,7 @@
                 <p class="mb-0 font-weight-bold" style="font-size: 100%">Xem trung tâm trợ giúp</p>
                  <p class="mb-0" style="font-size: 70%">Có thể vấn đề của bạn được đề cập tại đây</p>
                   <div class="tool_book_box">
-                   <a href=""><div class="btn p-0" style="background: #ff631c; color: white; font-size: 90%;   width: 50%; height: 25px">Xem tại đây</div></a>
+                   <a href=""><div class="btn p-0" style="background: #ff631c; color: white; font-size: 90%;   width: 50%; height: 24px">Xem tại đây</div></a>
                  </div>
                </div>        
              </div>
