--- a/dashboard_booking_seemore_pc.html
+++ b/dashboard_booking_seemore_pc.html
@@ -228,6 +228,18 @@ p.social_note,.question{
 
 }
 
+
+p.info_booking{
+    -webkit-box-orient: vertical;
+  font-size: 1rem;
+    margin-bottom: 0;
+    display: -webkit-box;
+    max-height: 52px;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
     </style>
     </style>
 
@@ -445,7 +457,7 @@ p.social_note,.question{
                  <img src="img/post/IMG_7423.jpg" width="100%" height="100%" style="border-radius: 8px">
                </div>
                <div class="pl-2" style="width: 30%;height: 80px;">
-                 <p class="mb-0 " style="font-size: 110%">Phòng giường đôi hoặc 2 giường đơn</p>
+                 <p class="info_booking mb-0 " style="font-size: 110%">Phòng giường đôi hoặc 2 giường đơn</p>
                  <p class="" style="color: #FF783A;font-size: 80%">Đặt phòng thành công</p>
                </div>
                <div class="image_book_box" style="width: 60%;height: 70px;">
@@ -469,7 +481,7 @@ p.social_note,.question{
                  <img src="img/post/IMG_7423.jpg" width="100%" height="100%" style="border-radius: 8px">
                </div>
                <div class="pl-2" style="width: 30%;height: 80px;">
-                 <p class="mb-0 " style="font-size: 110%">Phòng giường đôi hoặc 2 giường đơn</p>
+                 <p class="info_booking mb-0 " style="font-size: 110%">Phòng giường đôi hoặc 2 giường đơn</p>
                  <p class="" style="color: #FF783A;font-size: 80%">Đặt phòng thành công</p>
                </div>
                <div class="image_book_box" style="width: 60%;height: 70px;">
@@ -490,7 +502,7 @@ p.social_note,.question{
                  <img src="img/post/IMG_7423.jpg" width="100%" height="100%" style="border-radius: 8px">
                </div>
                <div class="pl-2" style="width: 30%;height: 80px;">
-                 <p class="mb-0 " style="font-size: 110%">Phòng giường đôi hoặc 2 giường đơn</p>
+                 <p class="info_booking mb-0 " style="font-size: 110%">Phòng giường đôi hoặc 2 giường đơn</p>
                  <p class="" style="color: #FF783A;font-size: 80%">Đặt phòng thành công</p>
                </div>
                <div class="image_book_box" style="width: 60%;height: 70px;">
@@ -511,7 +523,7 @@ p.social_note,.question{
                  <img src="img/post/IMG_7423.jpg" width="100%" height="100%" style="border-radius: 8px">
                </div>
                <div class="pl-2" style="width: 30%;height: 80px;">
-                 <p class="mb-0 " style="font-size: 110%">Phòng giường đôi hoặc 2 giường đơn</p>
+                 <p class="info_booking mb-0 " style="font-size: 110%">Phòng giường đôi hoặc 2 giường đơn</p>
                  <p class="" style="color: #FF783A;font-size: 80%">Đặt phòng thành công</p>
                </div>
                <div class="image_book_box" style="width: 60%;height: 70px;">
@@ -532,7 +544,7 @@ p.social_note,.question{
                  <img src="img/post/IMG_7423.jpg" width="100%" height="100%" style="border-radius: 8px">
                </div>
                <div class="pl-2" style="width: 30%;height: 80px;">
-                 <p class="mb-0 " style="font-size: 110%">Phòng giường đôi hoặc 2 giường đơn</p>
+                 <p class="info_booking mb-0 " style="font-size: 110%">Phòng giường đôi hoặc 2 giường đơn</p>
                  <p class="" style="color: #FF783A;font-size: 80%">Đặt phòng thành công</p>
                </div>
                <div class="image_book_box" style="width: 60%;height: 70px;">
